@@ -5,6 +5,18 @@
 
 (in-package #:clpm-client)
 
+(defun bundle-init (clpmfile &key asds)
+  "Create a new clpmfile located at CLPMFILE. Adds all ASDS (must be relative to
+CLPMFILE) to the new clpmfile."
+  (setf clpmfile (uiop:ensure-absolute-pathname clpmfile))
+  (with-clpm-proc (proc)
+    (clpm-proc-print
+     proc
+     `(with-bundle-default-pathname-defaults (,clpmfile)
+        (with-bundle-local-config (,clpmfile)
+          (bundle-init ,clpmfile :asds ',asds)))))
+  clpmfile)
+
 (defun bundle-install (&key clpmfile no-resolve (validate 'context-diff-approved-p))
   "Ensure a bundle is installed. Returns a source registry form if the install completed.
 
