@@ -26,6 +26,8 @@
   + =exec= CLI added.
   + =enter-context= function added to client to allow changing source registry
     and output translations of the current image.
+  + Add =bundle init= CLI and =bundle-init= in client to easily create a new
+    clpmfile.
 
 * v0.2.1 - 2020-04-05
 
